Make tests able to run w xdist
This significantly speeds up tests

Had to make some small tweaks to garuntee test collection gathers same tests on all threads, this mostly
had to do w/ the generated test names from parametrized tests.

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps = poetry >= 1.0.5
 commands=
     poetry install -v
     poetry env info
-    poetry run py.test -v test
+    poetry run py.test -v -n 4 test
 
 [testenv:linters]
 basepython = python3
