--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ ansible_runner = 'ansible_runner.receptor_plugin'
 [tool.poetry.dev-dependencies]
 more-itertools = "==5.0.0"
 pytest = "==4.4.0"
+pytest-xdist = "==1.32.0"
 "flake8" = "*"
 yamllint = "*"
 funcsigs = "*"
