--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ deps = poetry >= 1.0.5
 commands=
     poetry install -v
     poetry env info
-    poetry run py.test -v -n 4 test
+    poetry run py.test -v -n 4 -m "not serial" test
+    poetry run py.test -v test -m serial
 
 [testenv:linters]
 basepython = python3
