drop py2 target
More remains to fully drop py2 but 2.0.0 does not intend to support it as a version of python

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = linters, py27, py3
+envlist = linters, py3
 isolated_build = true
 
 [tox:.package]
@@ -28,9 +28,6 @@ commands=
     poetry run yamllint --version
     poetry run yamllint -s .
 
-[testenv:py27]
-commands =
-    {[testenv]commands}
 [testenv:py3]
 commands =
     {[testenv]commands}
